# autoware_ai_simulation

./: .gitlab-ci.yml  README.md
carla_simulator_bridge/: README.md
carla_simulator_bridge/carla_autoware_bridge/: CMakeLists.txt  package.xml
carla_simulator_bridge/carla_autoware_bridge/agent/launch/: my_mission_planning.launch
carla_simulator_bridge/carla_autoware_bridge/config/: sensors.json
carla_simulator_bridge/carla_autoware_bridge/launch/: carla_autoware_bridge.launch  carla_autoware_bridge_common.launch  carla_autoware_bridge_with_manual_control.launch
carla_simulator_bridge/carla_autoware_bridge/src/carla_autoware_bridge/: carla_to_autoware_detected_objects  carla_to_autoware_localization  carla_to_autoware_vehicle_status  carla_to_autoware_waypoints  odometry_to_posestamped  vehiclecmd_to_ackermanndrive
carla_simulator_bridge/carla_points_map_loader/: CMakeLists.txt
gazebo_camera_description/: CMakeLists.txt  package.xml
gazebo_imu_description/: CMakeLists.txt  package.xml
lgsvl_simulator_bridge/: CMakeLists.txt  package.xml
vehicle_gazebo_simulation_interface/: CMakeLists.txt  package.xml
vehicle_gazebo_simulation_interface/src/: vehicle_gazebo_info_publisher.cpp
vehicle_gazebo_simulation_launcher/: CMakeLists.txt  package.xml
wf_simulator/: CMakeLists.txt  package.xml
wf_simulator/include/wf_simulator/: vehicle_model_ros.h  wf_simulator_core.h
wf_simulator/include/wf_simulator/vehicle_model/: wfsim_model_constant_acceleration.hpp  wfsim_model_ideal.hpp  wfsim_model_interface.hpp  wfsim_model_time_delay.hpp
wf_simulator/launch/: wf_simulator.launch
wf_simulator/src/: vehicle_model_ros.cpp  wf_simulator_core.cpp  wf_simulator_node.cpp
wf_simulator/src/vehicle_model/: wfsim_model_constant_acceleration.cpp  wfsim_model_ideal.cpp  wfsim_model_interface.cpp  wfsim_model_time_delay.cpp
wf_simulator/test/: test_wf_simulator.test
wf_simulator/test/src/: test_wf_simulator.cpp
