<?xml version="1.0"?>
<package format="2">
  <name>lgsvl_simulator_bridge</name>
  <version>1.12.0</version>
  <description>The lgsvl_simulator_bridge package</description>
  <maintainer email="masaya.kataoka@tier4.jp">Masaya Kataoka</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosbridge_server</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>sensor_msgs</depend>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>python-requests</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>
