<?xml version="1.0"?>
<package format="2">
  <name>vehicle_gazebo_simulation_launcher</name>
  <version>1.12.0</version>
  <description>The vehicle_gazebo_simulation_launcher package</description>
  <maintainer email="yukky.saito@gmail.com">yukihiro saito</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_controller</depend>

  <exec_depend>mercurial</exec_depend>
  <exec_depend>velodyne_description</exec_depend>
</package>
